# mangadex-dl

./: .gitignore  cli.py  help-dict.txt  img-single-folder.py  imgprocessing.py  manga.py  pyproject.toml
src/mangadex_dl_john-erinjery/: cli.py  manga.py
